# talyxion-python

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cli-build/: nuitka.cfg
docs/: PUBLISHING.md
examples/: 01_alpha_research.py  02_trading_desk.py  03_marketplace.py
notebooks/: quickstart.ipynb
scripts/: extract_to_standalone_repo.sh  sync_to_github.sh
src/talyxion/: __init__.py  _config.py  _http.py  client.py  errors.py
src/talyxion/_builders/: alpha.py
src/talyxion/cli/: __init__.py  __main__.py  _version.py  auth.py  credentials.py  dashboard.py  device_token_client.py  keyring_store.py  logger.py  main.py  order_cmd.py  portfolio.py  profiles.py  repl.py  risk.py  run_cmd.py  runner.py  runner_entry.py  state.py  update_cmd.py
src/talyxion/cli/exchanges/: __init__.py  _base.py  binance.py
src/talyxion/cli/keys/: talyxion.pub
src/talyxion/models/: __init__.py  alphas.py  common.py  datafield.py  market.py  rates.py  signal.py  simulation.py  status.py  ticker.py  trading.py
src/talyxion/resources/: __init__.py  _base.py  alphas.py  datafields.py  market.py  rates.py  screener.py  signals.py  simulations.py  ticker.py  trading.py
src/talyxion/streaming/: __init__.py  _ws.py  feed_events.py  sim_progress.py  stream.py
tests/: conftest.py  test_cli_repl.py  test_client.py  test_errors.py  test_resources.py  test_signals.py  test_streaming.py
