[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "talyxion"
dynamic = ["version"]
description = "Official Python SDK for Talyxion (talyxion.com) — signals, screener, datafields, rates terminal, simulations, and realtime streaming."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Talyxion", email = "support@talyxion.com" }]
keywords = ["talyxion", "vnbrain", "trading", "signals", "fintech", "quant", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "websockets>=13",
]

[project.optional-dependencies]
pandas = ["pandas>=2"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.6",
    "build>=1.2",
    "twine>=5",
]

[project.urls]
Homepage = "https://talyxion.com"
Documentation = "https://talyxion.com/docs/sdk/python/"
Source = "https://github.com/khanhtrinh2003/talyxion-python"
Issues = "https://github.com/khanhtrinh2003/talyxion-python/issues"

[tool.hatch.version]
path = "src/talyxion/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/talyxion"]

[tool.hatch.build.targets.sdist]
include = ["src/talyxion", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/talyxion"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["websockets.*", "pandas"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
